--- a/samples/new-nm-project/pom.xml
+++ b/samples/new-nm-project/pom.xml
@@ -44,7 +44,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>3.0.0-M8</artifactId>
                 <version>2.14</version>
                 <configuration>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
@@ -53,7 +53,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.10</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>add-resource</id>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>dev.nm</groupId>
             <artifactId>nmdev</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
