--- a/samples/new-nm-project/pom.xml
+++ b/samples/new-nm-project/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nm.dev</groupId>
+    <groupId>dev.nm</groupId>
     <artifactId>new-nm-project</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
